# HydroChrono

./: .gitignore  CMakeLists.txt  README.md  build-config-example.json  build-config.example.json  build.ps1  quick-build.ps1
app/: CMakeLists.txt  run_hydrochrono.cpp
cmake/: config.h.in  version.h.in
data/demos/run_hydrochrono/f3of/decay_dt1/inputs/: f3of_decay_test_1.model.yaml
data/demos/run_hydrochrono/f3of/decay_dt2/inputs/: f3of_decay_dt2.setup.yaml
data/demos/run_hydrochrono/f3of/decay_dt3/inputs/: f3of_decay.hydro.yaml
data/demos/run_hydrochrono/iea_sphere/decay/inputs/: iea_sphere_decay.model.yaml
data/demos/run_hydrochrono/oswec/decay/inputs/: oswec_decay.hydro.yaml  oswec_decay.model.yaml  oswec_decay.simulation.yaml
data/demos/run_hydrochrono/rm3/decay/expected/: results.still.h5
data/demos/run_hydrochrono/rm3/decay/inputs/: rm3_decay.hydro.yaml  rm3_decay.simulation.yaml
data/yaml/oswec/: oswec.model.yaml  oswec.simulation.yaml  oswec_neutral.model.yaml  oswec_still.hydro.yaml
data/yaml/rm3/: rm3_decay.hydro.yaml  rm3_linearPTO_decay.model.yaml  rm3_nonlinearPTO.model.yaml
data/yaml/talos/: talos.hydro.yaml  talos.setup.yaml
demos/: CMakeLists.txt
demos/DeepCWind/: demo_DeepCWind_decay.cpp
demos/f3of/: demo_F3OF_DT1.cpp  demo_F3OF_DT2.cpp  demo_F3OF_DT3.cpp
demos/oswec/: compute_flap_pose.py  demo_oswec_decay.cpp  demo_oswec_reg_waves.cpp
demos/rm3/: demo_rm3_decay.cpp  demo_rm3_reg_waves.cpp
demos/sphere/: demo_sphere_decay.cpp  demo_sphere_irreg_waves.cpp  demo_sphere_irreg_waves_eta_import.cpp  demo_sphere_reg_waves.cpp
demos/yaml/f3of/: f3of.hydro.yaml  f3of.model.yaml  f3of.setup.yaml  f3of.simulation.yaml  f3of_rao.hydro.yaml
demos/yaml/iea_sphere/: iea_sphere.hydro.yaml  iea_sphere.model.yaml  iea_sphere.setup.yaml  iea_sphere.simulation.yaml  test.h5
demos/yaml/oswec/: oswec.hydro.yaml  oswec.setup.yaml  oswec_decay.model.yaml
demos/yaml/rm3/: rm3.hydro.yaml  rm3.setup.yaml  rm3_linearPTO.model.yaml
demos/yaml/slider_crank/: model.setup.yaml  slider_crank.model.yaml  slider_crank.setup.yaml  slider_crank.simulation.yaml
demos/yaml/talos/: talos.simulation.yaml  talos_linearPTO.model.yaml  talos_nonlinearPTO.model.yaml
docs/: _config.yml  index.markdown
docs/_main_pages/: about.md  developer_docs.md  get_started.md  logging.md  new_model.md  verification.md
docs/_main_pages/developer_docs/: build_docs.md  build_instructions.md  cmake_build_basics.md  cmake_build_structure.md  contribution_guidelines.md  logging_internals.md  prerequisites.md
docs/assets/papers/: README.md
include/hydroc/: h5_writer.h  helper.h  hydro_forces.h  logging.h  simulation_exporter.h  wave_types.h
include/hydroc/gui/: guihelper.h
include/hydroc/hydrochrono_runner/: RunHydroChronoFromYAML.h
scripts/: RUN-TESTS.ps1
src/: h5_writer.cpp  h5fileinfo.cpp  helper.cpp  hydro_forces.cpp  hydro_types.h  hydro_yaml_parser.cpp  hydro_yaml_parser.h  setup_hydro_from_yaml.cpp  setup_hydro_from_yaml.h  simulation_exporter.cpp  wave_types.cpp
src/gui/: guihelper.cpp  guihelperIRR.cpp  guihelperVSG.cpp  guihelper_impl.h
src/hydrochrono_runner/: run_hydrochrono_from_yaml.cpp
src/utils/: logger_backend.cpp  logger_backend.h  logging.cpp  misc_options.cpp  misc_options.h  setup_parser.cpp  setup_parser.h
src/utils/assets/: term_layout.txt
tests/: CMakeLists.txt
tests/regression/: CMakeLists.txt
tests/regression/f3of/: test_f3of_dt1.cpp  test_f3of_dt2.cpp  test_f3of_dt3.cpp
tests/regression/oswec/: test_oswec_decay.cpp  test_oswec_reg_waves.cpp
tests/regression/rm3/: rm3_reg_waves_test.cpp  test_rm3_decay.cpp  test_rm3_reg_waves.cpp
tests/regression/run_hydrochrono/: README.md  compare_results.py  generate_plots.py  inspect_fore_aft.py  requirements.txt  run_simulation.py  run_tests.py
tests/regression/run_hydrochrono/f3of/: signal_adapter.py
tests/regression/run_hydrochrono/f3of/decay_dt1/inputs/: f3of_decay.hydro.yaml  f3of_decay.simulation.yaml  f3of_decay_dt1.setup.yaml
tests/regression/run_hydrochrono/f3of/decay_dt2/inputs/: f3of_decay.simulation.yaml  f3of_decay_dt2.model.yaml  f3of_decay_dt2.setup.yaml
tests/regression/run_hydrochrono/f3of/decay_dt3/expected/: results.still.h5
tests/regression/run_hydrochrono/f3of/decay_dt3/inputs/: compare_rirfs.py  f3of_decay.simulation.yaml  f3of_decay_dt3.setup.yaml  f3of_decay_test_3.model.yaml
tests/regression/run_hydrochrono/iea_sphere/: signal_adapter.py
tests/regression/run_hydrochrono/iea_sphere/decay/expected/: hc_ref_iea_sphere_decay.txt  results.still.h5
tests/regression/run_hydrochrono/iea_sphere/decay/inputs/: iea_sphere_decay.hydro.yaml  iea_sphere_decay.setup.yaml
tests/regression/run_hydrochrono/oswec/: signal_adapter.py
tests/regression/run_hydrochrono/oswec/decay/inputs/: oswec_decay.setup.yaml
tests/regression/run_hydrochrono/rm3/: signal_adapter.py
tests/regression/run_hydrochrono/rm3/decay/expected/: results.still.h5
tests/regression/run_hydrochrono/rm3/decay/inputs/: rm3_decay.model.yaml  rm3_decay.setup.yaml
tests/regression/sphere/: test_sphere_decay.cpp  test_sphere_irreg_waves.cpp  test_sphere_irreg_waves_eta.cpp  test_sphere_reg_waves.cpp
tests/run_hydrochrono/: run_tests.py
tests/unit/: CMakeLists.txt  test_hydro_yaml_parser.cpp
